--- a/SmartRestaurant/SmartRestaurant/SmartRestaurant.csproj
+++ b/SmartRestaurant/SmartRestaurant/SmartRestaurant.csproj
@@ -1523,6 +1523,22 @@
     <Content Include="Content\quickui\libs\thirdparty\font-awesome\css\font-awesome.css" />
     <Content Include="Content\quickui\libs\thirdparty\font-awesome\css\font-awesome.min.css" />
     <Content Include="Content\quickui\libs\thirdparty\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\restaurant\dialog\bootstrap-dialog.css" />
+    <Content Include="Content\restaurant\dialog\bootstrap-dialog.js" />
+    <Content Include="Content\restaurant\layout\layout.css" />
+    <Content Include="Content\restaurant\other\dialog\dialog-common.js" />
+    <Content Include="Content\restaurant\other\dialog\dialog-delete.js" />
+    <Content Include="Content\restaurant\other\dialog\dialog-insert.js" />
+    <Content Include="Content\restaurant\other\dialog\dialog-update.js" />
+    <Content Include="Content\restaurant\other\szbjq\szbjq.css" />
+    <Content Include="Content\restaurant\other\szbjq\szbjq.js" />
+    <Content Include="Content\restaurant\sidebar-menu\sidebar-menu.css" />
+    <Content Include="Content\restaurant\sidebar-menu\sidebar-menu.js" />
+    <Content Include="Content\restaurant\table\bootstrap-table-zh-CN.js" />
+    <Content Include="Content\restaurant\table\bootstrap-table.css" />
+    <Content Include="Content\restaurant\table\bootstrap-table.js" />
+    <Content Include="Content\restaurant\tab\tab.css" />
+    <Content Include="Content\restaurant\tab\tab.js" />
     <Content Include="Content\Site.css" />
     <Content Include="packages.config" />
     <Content Include="Areas\Dictionary\Views\Dictionary\Detail.cshtml" />
@@ -1566,6 +1582,12 @@
     <Content Include="Areas\Mobiel\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Mobiel\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Mobiel\Views\Home\Index.cshtml" />
+    <Content Include="Areas\Restaurant\Views\Menu\Index.cshtml" />
+    <Content Include="Areas\Restaurant\Views\Menu\Insert.cshtml" />
+    <Content Include="Areas\Restaurant\Views\Menu\Update.cshtml" />
+    <Content Include="Areas\Restaurant\Views\Cplxbj\Index.cshtml" />
+    <Content Include="Areas\Restaurant\Views\Cplxbj\Insert.cshtml" />
+    <Content Include="Areas\Restaurant\Views\Cplxbj\Update.cshtml" />
     <None Include="Properties\PublishProfiles\release.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\css\page-default.css" />
@@ -1633,7 +1655,9 @@
     <Compile Include="Areas\Dictionary\DictionaryAreaRegistration.cs" />
     <Compile Include="Areas\Mobiel\Controllers\HomeController.cs" />
     <Compile Include="Areas\Mobiel\MobielAreaRegistration.cs" />
+    <Compile Include="Areas\Restaurant\Controllers\CplxbjController.cs" />
     <Compile Include="Areas\Restaurant\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Restaurant\Controllers\MenuController.cs" />
     <Compile Include="Areas\Restaurant\RestaurantAreaRegistration.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
