--- a/SmartRestaurant/SmartRestaurant/Areas/Mobiel/Views/web.config
+++ b/SmartRestaurant/SmartRestaurant/Areas/Mobiel/Views/web.config
@@ -17,7 +17,8 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="SmartRestaurant" />
-        
+        <add namespace="SmartRestaurant.Areas.Mobiel.Controllers" />
+
       </namespaces>
     </pages>
   </system.web.webPages.razor>
