--- a/SmartRestaurant/SmartRestaurant/SmartRestaurant.csproj
+++ b/SmartRestaurant/SmartRestaurant/SmartRestaurant.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>bin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -1569,6 +1569,7 @@
     <Content Include="Areas\Mobiel\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Mobiel\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Mobiel\Views\Home\Index.cshtml" />
+    <Content Include="Areas\Mobiel\Views\Home\ConfrimSubmit.cshtml" />
     <None Include="Properties\PublishProfiles\release.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\css\page-default.css" />
@@ -1636,6 +1637,7 @@
     <Compile Include="Areas\Dictionary\Controllers\DicContentController.cs" />
     <Compile Include="Areas\Dictionary\Controllers\DictionaryController.cs" />
     <Compile Include="Areas\Dictionary\DictionaryAreaRegistration.cs" />
+    <Compile Include="Areas\Mobiel\Controllers\BaseController.cs" />
     <Compile Include="Areas\Mobiel\Controllers\HomeController.cs" />
     <Compile Include="Areas\Mobiel\MobielAreaRegistration.cs" />
     <Compile Include="Areas\Restaurant\Controllers\HomeController.cs" />
@@ -1653,6 +1655,7 @@
   <ItemGroup>
     <Folder Include="Areas\Dictionary\Models\" />
     <Folder Include="Areas\Mobiel\Models\" />
+    <Folder Include="Areas\Mobiel\Views\Base\" />
     <Folder Include="Areas\Restaurant\Models\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Base\" />
