--- a/SmartRestaurant/SmartRestaurant/SmartRestaurant.csproj
+++ b/SmartRestaurant/SmartRestaurant/SmartRestaurant.csproj
@@ -1523,6 +1523,9 @@
     <Content Include="Content\quickui\libs\thirdparty\font-awesome\css\font-awesome.css" />
     <Content Include="Content\quickui\libs\thirdparty\font-awesome\css\font-awesome.min.css" />
     <Content Include="Content\quickui\libs\thirdparty\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\restaurant\datetimepicker\bootstrap-datetimepicker.css" />
+    <Content Include="Content\restaurant\datetimepicker\bootstrap-datetimepicker.js" />
+    <Content Include="Content\restaurant\datetimepicker\moment-with-locales.js" />
     <Content Include="Content\restaurant\dialog\bootstrap-dialog.css" />
     <Content Include="Content\restaurant\dialog\bootstrap-dialog.js" />
     <Content Include="Content\restaurant\img\miss.jpg" />
@@ -1599,6 +1602,7 @@
     <Content Include="Areas\Restaurant\Views\Zdgl\Insert.cshtml" />
     <Content Include="Areas\Restaurant\Views\Zdgl\Update.cshtml" />
     <Content Include="Areas\Restaurant\Views\Cpbj\Update.cshtml" />
+    <Content Include="Areas\Restaurant\Views\Cpsj\Index.cshtml" />
     <None Include="Properties\PublishProfiles\release.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\css\page-default.css" />
@@ -1669,6 +1673,7 @@
     <Compile Include="Areas\Mobiel\MobielAreaRegistration.cs" />
     <Compile Include="Areas\Restaurant\Controllers\CpbjController.cs" />
     <Compile Include="Areas\Restaurant\Controllers\CplxbjController.cs" />
+    <Compile Include="Areas\Restaurant\Controllers\CpsjController.cs" />
     <Compile Include="Areas\Restaurant\Controllers\HomeController.cs" />
     <Compile Include="Areas\Restaurant\Controllers\MenuController.cs" />
     <Compile Include="Areas\Restaurant\Controllers\ZdglController.cs" />
