--- a/SmartRestaurant/SmartRestaurant/SmartRestaurant.csproj
+++ b/SmartRestaurant/SmartRestaurant/SmartRestaurant.csproj
@@ -1603,6 +1603,7 @@
     <Content Include="Areas\Restaurant\Views\Zdgl\Update.cshtml" />
     <Content Include="Areas\Restaurant\Views\Cpbj\Update.cshtml" />
     <Content Include="Areas\Restaurant\Views\Cpsj\Index.cshtml" />
+    <Content Include="Areas\Restaurant\Views\Xsjh\Index.cshtml" />
     <None Include="Properties\PublishProfiles\release.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\css\page-default.css" />
@@ -1676,6 +1677,7 @@
     <Compile Include="Areas\Restaurant\Controllers\CpsjController.cs" />
     <Compile Include="Areas\Restaurant\Controllers\HomeController.cs" />
     <Compile Include="Areas\Restaurant\Controllers\MenuController.cs" />
+    <Compile Include="Areas\Restaurant\Controllers\XsjhController.cs" />
     <Compile Include="Areas\Restaurant\Controllers\ZdglController.cs" />
     <Compile Include="Areas\Restaurant\RestaurantAreaRegistration.cs" />
     <Compile Include="Controllers\BaseController.cs" />
